--- a/PoliceComputer/PoliceComputer/Properties/Resources.resx
+++ b/PoliceComputer/PoliceComputer/Properties/Resources.resx
@@ -136,4 +136,19 @@
   <data name="badgeInvert" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\badgeInvert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_0162574M" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0162574M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_0222096M" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0222096M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_0235643M" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0235643M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_0235645M" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0235645M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_2254374M" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2254374M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
